# robotframework-lynqa

./: .aiignore  .gitignore  .gitmodules  Makefile  README.md  pyproject.toml
.github/workflows/: acceptance.yml  ci.yml  release.yml
projects/pylynqa/: openspecapi.yml  pyproject.toml
projects/pylynqa/src/pylynqa/: __init__.py  client.py  models.py
projects/pylynqa/src/pylynqa/atest/: test_api.py
projects/pylynqa/src/pylynqa/test/: __init__.py  conftest.py  data_set.py  test_client.py
src/robotframework_lynqa/: __init__.py  library.py
src/robotframework_lynqa/atest/: lynqa_search.robot
src/robotframework_lynqa/test/: __init__.py  conftest.py  test_basic.py  test_library.py  test_lynqa.robot
src/robotframework_lynqa/test/data_set/: test_lynqa_nominal.robot  test_lynqa_with_date.robot  test_lynqa_with_results.robot  test_lynqa_without_url.robot  testrun_full_status.py  testrun_full_status_failure.py
