[build-system]
requires = ["setuptools>=77", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "robotframework-lynqa"
dynamic = ["version"]
description = "Robot Framework library for the Lynqa test execution agent"
readme = "README.md"
authors = [{ name = "Alexis Pallier", email = "alexis.pallier@petit-robot.bzh" }]
requires-python = ">=3.9"
license = "Apache-2.0"
license-files = ["LICENSE"]
dependencies = [
    "pylynqa",
    "robotframework>=7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-mock>=3",
    "pytest-responses>=0.5",
    "ruff>=0.15",
    "ty>=0.0",
    "coverage>=7.10"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]

[tool.ruff]
# Exclude directories.
exclude = [
    "venv"
]

line-length = 120
indent-width = 4

# Select specific rules to enable or disable.
[tool.ruff.lint]
preview = true
ignore = [
    # Resolve conflicting pydocstyle (D) rules: keep D211/D212, drop their pairs.
    "D203",  # one-blank-line-before-class (conflicts with D211)
    "D213",  # multi-line-summary-second-line (conflicts with D212)
]
select = [
    # pycodestyle (errors + warnings)
    "E",
    "W",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # McCabe complexity
    "C90",
    # Pylint
    "PL",
    # PEP 8 naming
    "N",
    # pydocstyle
    "D",
    # Ruff specific
    "RUF",
    # flake8-builtins (don't shadow builtins)
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-datetimez (timezone-aware datetimes)
    "DTZ",
    # flake8-future-annotations
    "FA",
    # flynt (string join -> f-string)
    "FLY",
    # flake8-import-conventions
    "ICN",
    # Perflint
    "PERF",
    # pygrep-hooks (blanket noqa/type-ignore, etc.)
    "PGH",
    # flake8-pie
    "PIE",
    # flake8-pytest-style
    "PT",
    # flake8-use-pathlib
    "PTH",
    # flake8-return
    "RET",
    # flake8-raise
    "RSE",
    # flake8-self (private member access)
    "SLF",
    # flake8-bandit (security)
    "S",
    # flake8-type-checking
    "TC",
    # flake8-tidy-imports
    "TID",
    # tryceratops (exception handling)
    "TRY",
]

[tool.ruff.lint.per-file-ignores]
# `assert` is the idiomatic way to express test expectations.
"**/test/**" = ["S101"]
"**/atest/**" = ["S101"]

[tool.ty.environment]
python-version = "3.9"
