[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pylynqa"
version = "0.1.0"
description = "Python client for the Lynqa API"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
dependencies = [
    "requests>=2.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-mock>=3",
    "pytest-responses>=0.5",
    "ruff>=0.15",
    "ty>=0.0",
    "coverage>=7.14"
]

[tool.setuptools.packages.find]
where = ["src"]
